First presentation draft created

--- a/forecasting_presentation/index.Rmd
+++ b/forecasting_presentation/index.Rmd
@@ -13,21 +13,50 @@ knit        : slidify::knit2slides
 
 ## Data Description
 
-1. Edit YAML front matter
-2. Write using R Markdown
-3. Use an empty line followed by three dashes to separate slides!
+* The data is included in the R forecast package
+* Data can be found at [datamarket.com](https://datamarket.com/data/set/22q2/monthly-australian-wine-sales-thousands-of-litres-by-wine-makers-in-bottles-1-litre)
+* It contains Australian total wine sales by wine makers in bottles smaller and equal to 1 litre
+* Data is from January 1980 to August 1994
 
---- .class #id 
+The first few entries (in thousand litres) are:
+```{r, echo=F, message=F}
+options(width=78)
+require(forecast)
+data("wineind")
+
+window(wineind, 1980, 1982.99)
+
+```
+
+
+---
 
 ## Applied model
+
+The Goal is the forecast of future wine sales in Australia. 
+A special class of time series modelling functions is applied: 
+A non-seasonal ARIMA model is defined by:
+$$ y'_{t} = c + \phi_{1}y'_{t-1} + \cdots + \phi_{p}y'_{t-p} + \theta_{1}e_{t-1} + \cdots + \theta_{q}e_{t-q} + e_{t}$$
+The degrees of the ARIMA model are determined with the forecast::auto.arima() function. The best model is selected based on the AICc criterium (The lower the better)
+```{r, echo=1:2}
+
+model<-auto.arima(wineind, max.order=6, stepwise=T, approximation = T)
+{
+print("Coefficients of model:")
+print(model$coef)
+}
+
+```
 
 ---
 
 ## The shiny application
-
+* Allows
 
 ---
 
 ## Further Improvements
 
-
+* Other model as ets or tbats can be used for comparison
+* a dataset could be made selective 
+* include testset for forecast quality validation
